--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   max-width: 375px;
   min-height: 100vh;
   margin: auto;
-  padding: 2em;
+  padding: 3.5em 2em;
 
   color: #44464e;
   background-color: #fefefe;
