fix: estilos de maquetado

--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -1,6 +1,6 @@
 .CreateTodoButton {
-    position: fixed;
-    bottom: 3.5em;
+    display: flex;
+    padding-bottom: 1em;
 }
 
 .CreateTodoButton button {
