--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .Content {
-    height: 72.5vh;
-    overflow: scroll;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    margin: 1em 0;
+    overflow-y: scroll;
 }
